# tudi

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
tests/: conftest.py  test_agent.py  test_agent_multi_tools.py  test_agent_tools.py  test_agent_typed_tools.py  test_conditional.py  test_flow.py  test_flow_case.py  test_flow_next.py  test_flow_type_check.py  test_output_parsers.py  util.py
tudi/: __init__.py  agent.py  base.py  conditional.py  flow.py  output_parsers.py  prompts.py  type_validator.py
tudi/statements/: __init__.py  case.py  conditional.py  map.py  next.py
